--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.42.0",
+    "firebase": "^12.9.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
